--- a/static/Database/Settings.json
+++ b/static/Database/Settings.json
@@ -4,14 +4,13 @@
       "Name":"ToggleShowExt",
       "description": "Show file extensions in Windows displays the suffix at the end of file names (like .txt, .jpg, .exe), indicating file types and helping users identify which programs can open them, simplifying file management and differentiation",
       "category": "Protection"
-    },
+  },
   {
     "Content": "Show Super Hidden",
     "Name":"ToggleShowHidden",
     "description": "Show Super Hidden displays files and folders in Windows that are hidden beyond standard hidden files, often system files to prevent accidental changes",
     "category": "Protection"
-
-},
+  },
   {
     "Content": "Dark Mode",
     "Name":"ToggleDarkMode",
@@ -35,5 +34,24 @@
     "Name":"MouseAcceleration",
     "description": "Cursor movement is affected by the speed of your physical mouse movements",
     "category": "Accessibility"
+  },
+  {
+    "Content": "End Task On Taskbar Windows 11",
+    "Name":"EndTaskOnTaskbar",
+    "description": "Option to end task when right clicking a program in the taskbar",
+    "category": "Accessibility"
+  },
+  {
+    "Content": "Clear Page File At Shutdown",
+    "Name":"ClearPageFileAtShutdown",
+    "description": "Page file in Windows removes sensitive data stored in virtual memory when the system shuts down. This enhances security by ensuring that the data in the page file (which may contain passwords, encryption keys, or other sensitive information) is wiped out and cannot be accessed after rebooting. However, it can increase shutdown time",
+    "category": "Storage "
+  },
+  {
+    "Content": "Auto End Tasks",
+    "Name":"AutoEndTasks",
+    "description": "Page file in Windows removes sensitive data stored in virtual memory when the system shuts down. This enhances security by ensuring that the data in the page file (which may contain passwords, encryption keys, or other sensitive information) is wiped out and cannot be accessed after rebooting. However, it can increase shutdown time",
+    "category": "Storage "
   }
+  
 ]
