--- a/static/Database/Settings.json
+++ b/static/Database/Settings.json
@@ -51,7 +51,12 @@
     "Content": "Auto End Tasks",
     "Name":"AutoEndTasks",
     "description": "Automatically end tasks that are not responding",
-    "category": "Storage "
+    "category": "Performance"
+  },
+  {
+    "Content": "Performance Options",
+    "Name":"VisualFXSetting",
+    "description": "Adjust for best performance",
+    "category": "Performance"
   }
-  
 ]
