--- a/static/Database/Applications.json
+++ b/static/Database/Applications.json
@@ -3152,5 +3152,21 @@
     "default": [],
     "category": "Utilities",
     "check": "false"
+  },
+  {
+    "Name": "MemTest86",
+    "Description": "MemTest86 boots from a USB flash drive and tests the RAM in your computer for faults using a series of comprehensive algorithms and test patterns.",
+    "winget": "none",
+    "choco": "none",
+    "default": [
+      {
+        "url": "https://www.memtest86.com/downloads/memtest86-usb.zip",
+        "launcher": "imageUSB.exe",
+        "args": "/silent",
+        "portable": "ture"
+      }
+    ],
+    "category": "Utilities",
+    "check": "false"
   }
 ]
