--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,10 +37,10 @@ jobs:
 
       - name: Commit 'itt' file
         run: |
-          git config --global user.name "emadadel4"
-          git config --global user.email "19177373+emadadel4@users.noreply.github.com"
-          git add itt.ps1
-          git commit -m "update"
-          git push
+          # git config --global user.name "emadadel4"
+          # git config --global user.email "19177373+emadadel4@users.noreply.github.com"
+          # git add itt.ps1
+          # git commit -m "update"
+          # git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
