--- a/.github/workflows/sourceforge.yml
+++ b/.github/workflows/sourceforge.yml
@@ -22,5 +22,5 @@ jobs:
 
       - name: Push to SourceForge
         run: |
-          git remote add sourceforge ssh://emadadel@emadadel.git.sourceforge.net/gitroot/itt
+          git remote add sourceforge ssh://emadadel@git.code.sf.net/p/itt/code itt-code
           git push -u sourceforge main
