--- a/.github/workflows/sourceforge.yml
+++ b/.github/workflows/sourceforge.yml
@@ -13,18 +13,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up SSH
+      - name: Set up Git credentials
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SOURCEFORGE_SSH_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -H git.code.sf.net >> ~/.ssh/known_hosts
-
-      - name: Test SSH Connection
-        run: |
-          ssh -T emadadel@git.code.sf.net
+          git config --global user.name "emadadel4"
+          git config --global user.email "19177373+emadadel4@users.noreply.github.com"
+          git remote set-url sourceforge https://$GITHUB_ACTOR:$SOURCEFORGE_TOKEN@git.code.sf.net/p/itt/code.git
 
       - name: Push to SourceForge
         run: |
-          git remote add sourceforge ssh://emadadel@git.code.sf.net/p/itt/code.git
           git push -u sourceforge main
