--- a/.github/workflows/sourceforge.yml
+++ b/.github/workflows/sourceforge.yml
@@ -17,7 +17,10 @@ jobs:
         run: |
           git config --global user.name "emadadel4"
           git config --global user.email "19177373+emadadel4@users.noreply.github.com"
-          git remote set-url sourceforge https://$GITHUB_ACTOR:$SOURCEFORGE_TOKEN@git.code.sf.net/p/itt/code.git
+          
+      - name: Add SourceForge remote
+        run: |
+          git remote add sourceforge https://$GITHUB_ACTOR:$SOURCEFORGE_TOKEN@git.code.sf.net/p/itt/code.git
 
       - name: Push to SourceForge
         run: |
