--- a/.github/workflows/sourceforge.yml
+++ b/.github/workflows/sourceforge.yml
@@ -17,13 +17,15 @@ jobs:
         run: |
           git config --global user.name "emadadel4"
           git config --global user.email "19177373+emadadel4@users.noreply.github.com"
-          
-      - name: Check remote URL
-        run: git remote -v
 
       - name: Add SourceForge remote with token
         run: |
           git remote add sourceforge https://emadadel:$SOURCEFORGE_TOKEN@git.code.sf.net/p/itt/code.git
+
+      - name: Test SourceForge credentials
+        run: |
+          echo "Testing SourceForge credentials..."
+          git ls-remote https://emadadel:$SOURCEFORGE_TOKEN@git.code.sf.net/p/itt/code.git
 
       - name: Push to SourceForge
         run: |
