--- a/static/Database/Applications.json
+++ b/static/Database/Applications.json
@@ -3184,5 +3184,14 @@
     ],
     "category": "Utilities",
     "check": "false"
+  },
+  {
+    "Name": "VLC Skins",
+    "Description": "Put the downloaded VLT files in the following folder: On Windows: the skins folder in the VLC installation directory (e.g. C:\\Program Files\\VideoLAN\\VLC\\skins) On Linux/Unix: ~/.local/share/vlc/skins2",
+    "winget": "",
+    "choco": "vlc-skins",
+    "default": [],
+    "category": "Media Tools",
+    "check": "false"
   }
 ]
