--- a/static/Database/Applications.json
+++ b/static/Database/Applications.json
@@ -3268,5 +3268,14 @@
     ],
     "category": "Runtimes",
     "check": "false"
+  },
+  {
+    "Name": "Volume2",
+    "Description": "Advanced Windows volume control",
+    "winget": "irzyxa.Volume2Portable",
+    "choco": "volume2",
+    "default": [],
+    "category": "Media Tools",
+    "check": "false"
   }
 ]
