--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,9 @@ mirror:
 
 sync_to_codeberg:
   stage: sync
-  image: alpine/git
+  image: alpine:latest  
   before_script:
+    - apk add --no-cache bash
     - git config --global user.name "emadadel"
   script:
     - git clone --mirror https://gitlab.com/emadadel/itt.git repo
