--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ sync_to_codeberg:
   stage: sync
   image: alpine:latest  
   before_script:
-    - apk add --no-cache bash
+    - apk add --no-cache bash git
     - git config --global user.name "emadadel"
   script:
     - git clone --mirror https://gitlab.com/emadadel/itt.git repo
