--- a/static/Database/Applications.json
+++ b/static/Database/Applications.json
@@ -300,7 +300,7 @@
     "Name": "Discord",
     "Description": "A VoIP application and digital distribution platform designed for creating communities and connecting gamers, providing text, voice, and video communication features",
     "winget": "Discord.Discord",
-    "choco": "discord.install",
+    "choco": "discord",
     "default": [],
     "category": "Communication",
     "check": "false"
